# ctxbranch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 2026-04-21-ctxbranch-design.md  2026-04-21-implementation-plan.md  usage.md
src/ctxbranch/: __init__.py  cli.py
src/ctxbranch/core/: __init__.py  claude_invoker.py  scheduler.py  state_manager.py
src/ctxbranch/slash_commands/: fork.md  merge.md  pause.md  throw.md  tree.md
src/ctxbranch/strategies/: __init__.py  ab.py  base.py  checkpoint.py  digression.py  hypothesis.py
tests/: conftest.py  test_claude_invoker.py  test_cli.py  test_cli_admin.py  test_cli_maintenance.py  test_merge.py  test_pause.py  test_scheduler.py  test_state_manager.py  test_strategies.py  test_strategies_extended.py
