[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctxbranch"
version = "0.1.0.dev0"
description = "Git-like branching for Claude Code conversations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DG-Elom", email = "elom.gnaglo@gmail.com" },
]
keywords = ["claude", "claude-code", "llm", "agent", "conversation", "branching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.6",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
ctxbranch = "ctxbranch.cli:main"

[project.urls]
Homepage = "https://github.com/DG-Elom/ctxbranch"
Repository = "https://github.com/DG-Elom/ctxbranch"
Issues = "https://github.com/DG-Elom/ctxbranch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ctxbranch"]

[tool.hatch.build.targets.wheel.force-include]
"src/ctxbranch/slash_commands" = "ctxbranch/slash_commands"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/ctxbranch"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
